<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="app_name" tools:ignore="Typos">Capstone1</string>

    <string name="check">확인</string>

    <!-- 검색 화면 -->
    <string name="filter">≡ 필터</string>
    <string name="text">text</string>
    <string name="emptyResult">검색 결과가 없습니다</string>

    <string name="searchTitle">title</string>
    <string name="searchCategory">cat</string>
    <string name="searchTheme">theme</string>
    <string name="searchStar">★ </string>
    <string name="searchRepu">repu</string>
    <string name="searchAddress">address</string>

    <!--메인 화면-->
    <string name="searchView">가게 검색</string>
    <string name="favRestList">맛집 리스트</string>

    <!--필터 설정-->
    <string name="cat">카테고리</string>
    <string name="fromRepu">평점순</string>
    <string name="fromDate">작성순</string>
    <!--카테고리-->
    <string-array name="cat">
        <item>한식</item>
        <item>일식</item>
        <item>중식</item>
        <item>경양식</item>
        <item>패스트푸드</item>
        <item>식육/숯불구이</item>
        <item>기타</item>
        <item>호프/통닭</item>
        <item>분식</item>
        <item>김밥/도시락</item>
        <item>정종/대포집/소주방</item>
        <item>횟집</item>
        <item>탕류/보신용</item>
        <item>인도/태국</item>
        <item>감성주점</item>
        <item>출장조리</item>
        <item>카페</item>
        <item>패밀리레스트랑</item>
        <item>냉면집</item>
        <item>뷔페식</item>
        <item>키즈카페</item>
        <item>라이브카페</item>
        <item>복어</item>
    </string-array>

    <string name="setFilter">필터적용</string>

    <!--내 정보-->
    <string name="myInfo">내 정보</string>
    <string name="needLogin">로그인이 필요합니다.</string>
    <string name="updatePW">비밀번호 변경</string>
    <string name="resign">회원 탈퇴</string>
    <string name="logout">로그아웃</string>

    <!--로그인 창-->
    <string name="login">로그인</string>
    <string name="ID">아이디</string>
    <string name="PW">비밀번호</string>
    <string name="sign">회원가입</string>
    <string name="findID">ID/PW찾기</string>

    <!--회원가입-->
    <string name="idCompare">중복확인</string>
    <string name="idSame">존재하는 아이디입니다.</string>
    <string name="idDifferent">사용가능한 아이디입니다.</string>
    <string name="pwCheck">비밀번호 확인</string>
    <string name="pwSame">비밀번호가 일치합니다.</string>
    <string name="pwDifferent">비밀번호가 일치하지 않습니다.</string>
    <string name="name">이름</string>
    <string name="birth">생년월일8자리</string>

    <!-- ID/PW 찾기-->
    <string name="idFind">아이디 찾기</string>
    <string name="pwReset">비밀번호 초기화</string>

    <!-- 비밀번호 변경 -->
    <string name="changePW">비밀번호 변경</string>

    <!-- 가게 정보 -->
    <string name="restName">restName</string>
    <string name="address">주소</string>
    <string name="addressInfo">addressInfo</string>
    <string name="avgRepu">평점평균</string>
    <string name="avgRepuInfo">avgRepu</string>
    <string name="viewAllReviews">리뷰전체보기 ></string>
    <string name="makeReview">리뷰쓰러가기</string>
    <string name="makeFavRest">맛집등록하기</string>
    <string name="deleteFavRest">맛집삭제하기</string>

    <!-- 리뷰 정보 -->
    <string name="myReview">내가 남긴 리뷰</string>
    <string name="noReview">남겨진 리뷰가 없습니다.</string>
    <string name="taste">맛</string>
    <string name="price">가격</string>
    <string name="service">서비스</string>
    <string name="cleaness">청결도</string>
    <string name="review">리뷰</string>
    <string name="reviewInfo">리뷰 입력</string>
    <string name="reviewReset">리뷰수정하기</string>
    <string name="registReview">리뷰 등록</string>
    <string name="updateReview">리뷰 수정</string>
    <string name="deleteReview">리뷰 삭제</string>
    <string name="reviewID">리뷰 아이디</string>
    <string name="createat">작성 시간</string>

</resources>