<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F0F0"
    tools:ignore="SpeakableTextPresentCheck"
    tools:context=".View.MyInfo">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F0F0F0">

        <Button
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_arrow_back_button"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/needLogin"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/myInfo"
            android:textSize="30sp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F0F0F0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginInfoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:background="#F0F0F0"
            android:text="@string/needLogin"
            android:textColor="#A0A0A0"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck"
            android:stateListAnimator="@null" />
    </LinearLayout>

    <Button
        android:id="@+id/changePWButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="#F0F0F0"
        android:text="@string/updatePW"
        android:enabled="false"
        android:visibility="gone"
        android:textSize="25sp"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/resignButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#F0F0F0"
        android:text="@string/resign"
        android:enabled="false"
        android:visibility="gone"
        android:textSize="25sp"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#F0F0F0"
        android:text="@string/logout"
        android:enabled="false"
        android:visibility="gone"
        android:textSize="25sp"
        android:stateListAnimator="@null"/>
</LinearLayout>