<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck"
    android:background="#FFFFFF"
    tools:context=".View.LoginMain">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF">

        <Button
            android:id="@+id/loginBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_arrow_back_button"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:background="#FFFFFF"
        tools:context=".View.LoginMain">

        <EditText
            android:id="@+id/loginID"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:ems="15"
            android:hint="@string/ID"
            android:inputType="textPersonName"
            android:text=""
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/loginPW"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="15"
            android:hint="@string/PW"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/normal_button"
                android:text="@string/sign"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/findIDPW"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/normal_button"
                android:text="@string/findID"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>