<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_result"
        android:orientation="horizontal"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchTitle"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchCategory"
                    android:textSize="20sp"
                    android:textColor="#FF7F00"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchTheme"
                    android:textSize="20sp"
                    android:textColor="#FF7F00"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchStar"
                    android:textSize="20sp"
                    android:textColor="#FF7F00"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/repu"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/searchRepu"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/distant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/searchDistant"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>